<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ToDoCompose</string>
    <string name="task_detail_screen">Task Detail</string>
    <string name="add_edit_task_screen">Task Add/Edit</string>

    <string name="task_title">Title</string>
    <string name="task_description">task description</string>

    <string name="task_menu_filter">task filter</string>
    <string name="all_task">All Tasks</string>
    <string name="completed_task">Completed Tasks</string>
    <string name="active_task">Active Tasks</string>

    <string name="menu_back">Menu back</string>

    <string name="task_screen" >Task</string>
    <string name="statistics_screen">Statistics</string>

    <string name="active_task_percent">Active : %.1f％</string>
    <string name="completed_task_percent">Completed : %.1f％</string>

<!-- Test追加時にContent Descriptionとして使用-->
    <string name="add_task_fab">Add Task Button</string>
    <string name="edit_task_fab">Edit Task Button</string>
    <string name="save_task_fab">Save Task Button</string>
    <string name="delete_task_icon">Delete Task</string>
</resources>